<resources>
    <string name="app_name">ChatWise Assignment</string>
    <string name="view_products">View Products</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">product name</string>
    <string name="product_title">Product Title</string>
    <string name="description">Description</string>
    <string name="product_list">Product List</string>
    <string name="product_price">Product Price</string>
    <string name="rating">Rating</string>
    <string name="product_discount">Product Discount</string>
    <string name="product_detail_image">Product Detail Image</string>
    <string name="product_main_title">Product main title</string>
    <string name="rating_out_of_5">/5 Rating</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="current_price">Current Price</string>
    <string name="delivery_date">Delivery date:</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="stock">Stock:</string>
    <string name="address">address</string>
    <string name="delivery_date_value">Delivery date value</string>
    <string name="product_description">Product Description</string>
    <string name="detailed_description_of_the_product_goes_here">Detailed description of the product goes here.</string>
    <string name="dimensions_of_the_product">Dimensions of the product</string>
    <string name="details_about_warranty_of_the_product">Details about warranty of the product</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="shipping_details">Shipping details</string>
    <string name="return_policy">Return Policy</string>
    <string name="details_about_return_policy">Details about return policy</string>
    <string name="customer_comments">Customer Comments</string>
    <string name="user_reviews_and_comments">User reviews and comments</string>
    <string name="dollar">$</string>
    <string name="rating_out_of">/5 Rating</string>
    <string name="discount_logo">% off</string>
    <string name="rating_of_product">rating of product</string>
    <string name="current_stock">current stock</string>
</resources>