<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/product_image"
            android:src="@drawable/ic_product_image_foreground"
            android:scaleType="centerInside" />

            <TextView
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_main_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
            android:id="@+id/product_ratings_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_of_product"
            android:textSize="16sp"
            android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/product_ratings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_out_of_5"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/product_stock_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textSize="16sp"
                android:layout_marginEnd="2dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/product_stock_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_stock"
                android:textSize="16sp"
                android:paddingBottom="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_discount_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount_percentage"
                android:textSize="16sp"
                android:textColor="#0abb48"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/product_discount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount_logo"
                android:textSize="16sp"
                android:textColor="#0abb48"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_price"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
            android:id="@+id/product_delivery_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_date"
            android:textSize="16sp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/product_delivery_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_date_value"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
            android:id="@+id/product_deliver_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deliver_to"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="16dp" />

            <TextView
                android:id="@+id/product_delivery_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address">

            </TextView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:radius="8dp"
            android:layout_marginBottom="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
            android:id="@+id/product_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />

            <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailed_description_of_the_product_goes_here"
            android:textSize="14sp"
            android:layout_below="@+id/product_description_title"
            android:paddingBottom="4dp" />

            <TextView
            android:id="@+id/product_dimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dimensions_of_the_product"
            android:textSize="14sp"
            android:layout_below="@+id/product_description"
            android:paddingBottom="5dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:radius="8dp"
            android:layout_marginBottom="4dp">

            <TextView
            android:id="@+id/product_warranty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_about_warranty_of_the_product"
            android:textSize="14sp"
            android:paddingBottom="16dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:radius="8dp"
            android:layout_marginBottom="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
            android:id="@+id/product_shipping_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipping_information"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/product_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipping_details"
            android:layout_below="@+id/product_shipping_info"
            android:textSize="14sp"
            android:paddingBottom="4dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:radius="8dp"
            android:layout_marginBottom="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
            android:id="@+id/product_return_policy_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_policy"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />

            <TextView
            android:id="@+id/product_return_policy_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_about_return_policy"
            android:layout_below="@+id/product_return_policy_title"
            android:textSize="14sp"
            android:paddingBottom="4dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:radius="8dp"
            android:layout_marginBottom="4dp">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_to_cart"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:focusable="true"
                android:textColor="@color/black"
                android:backgroundTint="#ffe800"
                android:clickable="true"
                android:text="@string/add_to_cart" />

            <Button
                android:id="@+id/buy_now"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:focusable="true"
                android:textColor="@color/black"
                android:backgroundTint="#89e8f7"
                android:clickable="true"
                android:text="@string/buy_now" />
        </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/product_comments_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_comments"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/product_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_reviews_and_comments"
            android:textSize="14sp"
            android:paddingBottom="16dp" />

    </LinearLayout>
</ScrollView>